# codex

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: index.md
docs/tetris/: app.js  index.html  styles.css
src/game/: __init__.py  __main__.py  loop.py
tests/: __init__.py
tests/game/: test_entrypoint.py
