[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game1"
version = "0.1.0"
description = "Prototype scaffolding for the game1 project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
game = "game.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail-under = 85
show-missing = true
